[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "httpx-pki"
version = "0.2.0"
description = "PKCS#12 client-certificate (mTLS) sessions for httpx"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Carl Best" }]
keywords = ["httpx", "pkcs12", "pki", "mtls", "ssl", "client-certificate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "cryptography>=44",
    "certifi",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pylint>=4",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/ccbest/httpx-pki"
Source = "https://github.com/ccbest/httpx-pki"
Issues = "https://github.com/ccbest/httpx-pki/issues"

[tool.hatch.build.targets.wheel]
packages = ["httpx_pki"]

[tool.hatch.build.targets.wheel.force-include]
"httpx_pki/py.typed" = "httpx_pki/py.typed"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=httpx_pki --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["httpx_pki"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
